# robotic-follower

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DESIGN_PCL_PROCESSING.md  MiniSUNRGBD.json  QUICKSTART.md  README.md  clean_pkg_cache.sh  constraints.txt  install_dependencies.sh  pip_freeze.txt
src/camera_acquisition/: package.xml  setup.cfg  setup.py
src/camera_acquisition/camera_acquisition/: __init__.py
src/camera_acquisition/camera_acquisition/calibration/: __init__.py  calibration_validator.py  intrinsic_calibrator.py
src/camera_acquisition/camera_acquisition/camera/: __init__.py  base_camera.py  camera_manager.py  realsense_camera.py
src/camera_acquisition/camera_acquisition/ros_nodes/: __init__.py  camera_node.py
src/camera_acquisition/config/: camera_config.yaml
src/camera_acquisition/launch/: camera.launch.py
src/cognition/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/cognition/cognition/: __init__.py  run_detection.py
src/cognition/cognition/config/: model_config.yaml  pipeline_config.yaml
src/cognition/cognition/detection/: __init__.py
src/cognition/cognition/pcl_processing/: pcl_math.py
src/cognition/cognition/point_cloud/: __init__.py
src/cognition/cognition/ros_nodes/: __init__.py  perception_node.py  perception_node_mmdet3d.py
src/cognition/cognition/scripts/: __init__.py  detect.py  prepare_data.py  train.py
src/cognition/launch/: perception.launch.py
src/cognition/pcl_processing/: CMakeLists.txt  README.md
src/cognition/pcl_processing/src/: density_calculator.cpp  depth_to_pointcloud.cpp
src/cognition/tests/: test_filters.py
src/coordinate_transform/: CMakeLists.txt  package.xml  setup.py
src/coordinate_transform/config/: frames.yaml
src/coordinate_transform/coordinate_transform/: __init__.py  tf_debug_node.py
src/coordinate_transform/coordinate_transform/config/: __init__.py  frame_names.py
src/coordinate_transform/coordinate_transform/coordinate_converter/: __init__.py  coordinate_converter.py
src/coordinate_transform/coordinate_transform/geometry/: __init__.py  geometry_utils.py  point_cloud_processor.py
src/coordinate_transform/coordinate_transform/pose_utils/: __init__.py  pose_calculator.py  pose_interpolation.py  pose_validator.py
src/coordinate_transform/coordinate_transform/tf_manager/: __init__.py  tf_debugger.py  tf_publisher.py  tf_tree_manager.py
src/coordinate_transform/launch/: coordinate_transform.launch.py
src/coordinate_transform/resource/: coordinate_transform
src/hand_eye_calibration/: README.md  package.xml  setup.py
src/hand_eye_calibration/config/: calibration_config.yaml
src/hand_eye_calibration/hand_eye_calibration/: __init__.py
src/hand_eye_calibration/hand_eye_calibration/calibration/: __init__.py  calibration_manager.py  calibration_validator.py  extrinsic_calibrator.py
src/hand_eye_calibration/hand_eye_calibration/camera/: __init__.py  board_detector.py  camera_capture.py
src/hand_eye_calibration/hand_eye_calibration/robot/: __init__.py  robot_interface.py
src/hand_eye_calibration/hand_eye_calibration/ros_nodes/: __init__.py  calibration_node.py  visualizer_node.py
src/hand_eye_calibration/hand_eye_calibration/utils/: __init__.py  file_io.py
src/hand_eye_calibration/launch/: calibration.launch.py  simulation.launch.py  system.launch.py  visualizer.launch.py
src/hand_eye_calibration/srv/: AddCalibrationSample.srv  ExecuteCalibration.srv
src/hand_ros2_calib/: CMakeLists.txt  package.xml  setup.py
src/hand_ros2_calib/config/: board_config.yaml  calibration_params.yaml
src/hand_ros2_calib/hand_ros2_calib/: __init__.py  calibration_node.py
src/hand_ros2_calib/hand_ros2_calib/calibration/: __init__.py  calibration_manager.py  calibration_types.py  extrinsic_calibrator.py  intrinsic_calibrator.py
src/hand_ros2_calib/hand_ros2_calib/camera/: __init__.py  camera_manager.py  realsense_camera.py
src/hand_ros2_calib/hand_ros2_calib/robot/: __init__.py  robot_interface.py
src/hand_ros2_calib/hand_ros2_calib/utils/: __init__.py  file_io.py  visualization.py
src/hand_ros2_calib/hand_ros2_calib/validation/: __init__.py  calibration_validator.py
src/hand_ros2_calib/launch/: hand_eye_calibration.launch.py  hand_eye_verification.launch.py
src/hand_ros2_calib/resource/: hand_ros2_calib
src/robot_execution/: README.md  package.xml  setup.cfg  setup.py
src/robot_execution/config/: dummy-ros2.ros2_control.xacro  dummy-ros2.srdf  dummy_controllers.yaml  joint_limits.yaml
src/robot_execution/launch/: hardware_only.launch.py  ros2_control.launch.py
src/robot_execution/robot_execution/: __init__.py
src/robot_execution/robot_execution/hardware/: __init__.py  dummy_hardware.py
src/robot_execution/robot_execution/ros_nodes/: __init__.py
src/robot_execution/urdf/: dummy-ros2.xacro
src/robotic_follower/: package.xml  ruff.toml  setup.cfg  setup.py
src/robotic_follower/dataset/: MiniSUNRGBD.json  README.md  mini_sunrgbd_converter.py
src/robotic_follower/doc/: board.md  development_guide.md  train_votenet_mini_sunrgbd.md
src/robotic_follower/launch/: eazy_handeye_calib.launch.py  hand_eye_calibration.launch.py  perception_real.launch.py  perception_sim.launch.py  robot_control.launch.py  rviz_perception.launch.py  track_and_follow.launch.py
src/robotic_follower/model/: README.md
src/robotic_follower/model/config/: density_votenet_config.yaml  density_votenet_to_scene-70c.yaml  fastsam_rgbd_track.yaml  ground_cluster.yaml  votenet_config.yaml  yolov8_seg_rgbd_track.yaml
src/robotic_follower/robotic_follower/calibration/: __init__.py  board_detector.py  calibration_manager.py  calibration_validator.py  camera_capture.py  extrinsic_calibrator.py
src/robotic_follower/robotic_follower/interfaces/: __init__.py  arm_controller.py  (+3 more)
src/robotic_follower/rviz/: default.rviz  perception_rviz.rviz
src/robotic_follower/test/: test_ruff.py
src/robotic_follower/urdf/: dummy_with_d435i.urdf.xacro
src/robotic_follower_msgs/: CMakeLists.txt  package.xml
src/robotic_follower_msgs/msg/: TrackedObject3D.msg  TrackedObject3DArray.msg
(+227 files in other folders)
