<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_execution</name>
  <version>0.0.0</version>
  <description>机械臂执行模块 - 基于ros2_control控制六自由度Dummy机械臂</description>
  <maintainer email="srsnng@hotmail.com">srsnn</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>dummy_controller</depend>
  <depend>dummy-ros2_description</depend>
  <depend>fake_components</depend>
  <exec_depend>dummy_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
