<?xml version="1.0"?>
<package format="3">
  <name>pcl_processing</name>
  <version>1.0.0</version>
  <description>Unified point cloud processing package with density-aware 3D object detection</description>
  <maintainer email="example@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_py</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <depend>opencv4</depend>
  <depend>pcl</depend>
  <depend>eigen3_cmake_module</depend>

  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclpy_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
</package>
